--- a/04_graph/Makefile
+++ b/04_graph/Makefile
@@ -1,2 +1,14 @@
+
+default:
+	make txt2bin
+	make binrel
+	make count_rel
+
+txt2bin: txt2bin.cpp Makefile
+	g++ -o txt2bin txt2bin.cpp
+
+binrel: binrel.cpp Makefile
+	g++ -o binrel binrel.cpp
+
 count_rel: count_rel.cpp Makefile
 	g++ -o count_rel count_rel.cpp
